--- a/recipes.html
+++ b/recipes.html
@@ -31,7 +31,7 @@
       </ul>
   </nav>
 
-  <div class="links"> 
+  <div role="banner" class="links"> 
     <a href="#pas">White Sauce Pasta</a><span>|</span>
     <a href="#pan">Dutch Baby Pancake</a><span>|</span>
     <a href="#cake">Tres Leches Cake</a>
