--- a/travel.html
+++ b/travel.html
@@ -32,7 +32,7 @@
       </ul>
   </nav>
 
-  <div class="links"> 
+  <div role="banner" class="links"> 
     <a href="#bg">Sofia, Bulgaria</a><span>|</span>
     <a href="#sp">Barcelona, Spain</a><span>|</span>
     <a href="#gr">Santorini, Greece</a><span>|</span>
