--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </ul>
   </nav>
 
-  <div class="links"> 
+  <div role="banner" class="links"> 
     <a href="#lu">Lucy</a><span>|</span>
     <a href="#ro">Rosie</a><span>|</span>
     <a href="#hon">Honey</a><span>|</span>
