--- a/recipes.html
+++ b/recipes.html
@@ -37,7 +37,7 @@
     <a href="#cake">Tres Leches Cake</a>
   </div>
 
-    <main id = "main">
+    <main id = "main" tabindex="0">
     <div class="pas" id="pas">
         <h2>White Sauce Pasta</h2>
         <span><span class="diff">Origin:</span> France/Italy</span>
