--- a/travel.html
+++ b/travel.html
@@ -41,7 +41,7 @@
     <a href="#sw">Zermatt, Switzerland</a>
   </div>
 
-    <main id = "main">
+    <main id = "main" tabindex="0">
       <div class="bg" id="bg">
         <h2>Sofia, Bulgaria</h2>
 
@@ -101,7 +101,7 @@
 
         <div class = "map">
           <h2>Interactive Map</h2>
-         <iframe width="600" height="450" style="border:0" loading="lazy" allowfullscreen
+         <iframe title="sofiaMap" width="600" height="450" style="border:0" loading="lazy" allowfullscreen
           src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ9Xsxy4KGqkARYF6_aRKgAAQ&key=AIzaSyDcYDK2hV9vXmy2lN5EG5s807sTBl-fSQI"></iframe>
         </div>
          <!-- Alyna Petrov-->
@@ -166,7 +166,7 @@
 
         <div class = "map">
           <h2>Interactive Map</h2>
-          <iframe width="600" height="450" style="border:0" loading="lazy" allowfullscreen
+          <iframe title="barcelonaMap" width="600" height="450" style="border:0" loading="lazy" allowfullscreen
             src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ5TCOcRaYpBIRCmZHTz37sEQ&key=AIzaSyDcYDK2hV9vXmy2lN5EG5s807sTBl-fSQI"></iframe>
          </div>
          <!-- Jean Gamboa Fuentes -->
@@ -227,7 +227,7 @@
 
         <div class = "map">
         <h2>Interactive Map</h2>
-        <iframe width="600" height="450" style="border:0" loading="lazy" allowfullscreen
+        <iframe title="santoriniMap" width="600" height="450" style="border:0" loading="lazy" allowfullscreen
         src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ6bzjBc7NmRQR26Hvu5LB9Ak&key=AIzaSyDcYDK2hV9vXmy2lN5EG5s807sTBl-fSQI"></iframe>
         </div>
          <!-- Alyna Petrov-->
@@ -288,7 +288,7 @@
 
       <div class = "map">
       <h2>Interactive Map</h2>
-      <iframe width="600" height="450" style="border:0" loading="lazy" allowfullscreen
+      <iframe title="niceMap" width="600" height="450" style="border:0" loading="lazy" allowfullscreen
       src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJMS2FahDQzRIRcJqX_aUZCAQ&key=AIzaSyDcYDK2hV9vXmy2lN5EG5s807sTBl-fSQI"></iframe>
       </div>
        <!-- Margaret Cooper -->
@@ -351,7 +351,7 @@
 
       <div class = "map">
       <h2>Interactive Map</h2>
-      <iframe width="600" height="450" style="border:0" loading="lazy" allowfullscreen
+      <iframe title="kotorMap" width="600" height="450" style="border:0" loading="lazy" allowfullscreen
       src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJG8lwPQYzTBMRBpMuIV7xc3o&key=AIzaSyDcYDK2hV9vXmy2lN5EG5s807sTBl-fSQI"></iframe>
       </div>
        <!-- Alyna Petrov-->
@@ -412,7 +412,7 @@
 
       <div class = "map">
         <h2>Interactive Map</h2>
-        <iframe width="600" height="450" style="border:0" loading="lazy" allowfullscreen
+        <iframe title="zermattMap" width="600" height="450" style="border:0" loading="lazy" allowfullscreen
         src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJzeUuKaI1j0cRcG8ZQIj_AAQ&key=AIzaSyDcYDK2hV9vXmy2lN5EG5s807sTBl-fSQI"></iframe>
         </div>
        <!-- Maya Rosenthal -->
